Ahora si el perfil no ha sido seleccionado no sale el texto de selecciona categorias

--- a/src/app/main/recoleccion-datos/recoleccion-datos.component.html
+++ b/src/app/main/recoleccion-datos/recoleccion-datos.component.html
@@ -9,7 +9,7 @@
         </ion-select>
       </ion-item>
 
-      <h1 class="encabezado centrado">{{"SELECT_AREAS" | translate}}</h1>
+      <h1 *ngIf="ticketService.ticketInformation.recoleccionDatos.perfilUsuario != ''" class="encabezado centrado">{{"SELECT_AREAS" | translate}}</h1>
       <div *ngFor="let area of areasCandidatas">
         <ion-list-header>
           <h2>{{area.nombre}}</h2>
