--- a/src/global.scss
+++ b/src/global.scss
@@ -71,11 +71,11 @@
 }
 
 .txt-strong{
-  font-weight: bolder;
+  font-weight: bold;
 }
 
 .txt-subrayado{
-  text-decoration: underline;
+  text-decoration: blink;
 }
 
 
