--- a/src/app/main/recomendacion/recomendacion.component.html
+++ b/src/app/main/recomendacion/recomendacion.component.html
@@ -1,45 +1,40 @@
 <ion-app>
   <ion-content>
-  <h1 class="encabezado centrado">Resultados</h1>
-  <ion-grid>
-    <ion-row class="ion-justify-content-center">
-      <ion-col>
-        <h1 class="centrado txt-strong txt-subrayado">En base a sus respuestas debe considerar las siguientes recomendaciones</h1>
-      </ion-col>
-    </ion-row>
-    <ion-row class="ion-justify-content-center">
-      <ion-col size="12" size-md="12">
-        <div *ngFor="let area of datosAreas">
-          <h2>{{area.nombre}}</h2>
-          <div *ngFor="let cat of area.categorias">
-              <ul>
-                <li class="nested-list"> <b>{{cat.nombre}}</b>| {{cat.descripcion}}
-                  <ol>
-                    <div *ngFor="let pregunta of cat.preguntas">
-                      <ng-container
-                        *ngIf="pregunta.perfil.perfil == this.ticketService.ticketInformation.recoleccionDatos.perfilUsuario && 
-                          pregunta.puntuacionRecomendacion >= pregunta.respuestaSeleccionada.puntuacion">
-                        <li [innerHTML]="pregunta.recomendacion"></li>
-                      </ng-container>
-                    </div>
-                  </ol>
-                </li>
-              </ul>
-          </div>
-        </div>
-      </ion-col>
-    </ion-row>
+    <h1 class="encabezado centrado">Resultados</h1>
+    <ion-grid>
+      <ion-row class="ion-justify-content-center">
+        <ion-col size="12">
+          <p-tabView (onChange)="indexTabPanel = $event.index">
+            <p-tabPanel [header]="area.nombre" *ngFor="let area of getAreasConCategoriasSeleccionadas(); let i = index" [selected]="i == indexTabPanel">
+              <div *ngFor="let cat of area.categorias">
+                <ul>
+                  <li class="nested-list"> <b>{{cat.nombre}}</b>| {{cat.descripcion}}
+                    <ol>
+                      <div *ngFor="let pregunta of cat.preguntas">
+                        <ng-container *ngIf="pregunta.perfil.perfil == this.ticketService.ticketInformation.recoleccionDatos.perfilUsuario && 
+                            pregunta.puntuacionRecomendacion >= pregunta.respuestaSeleccionada.puntuacion">
+                            <li [innerHTML]="pregunta.recomendacion"></li>
+                          </ng-container>
+                        </div>
+                      </ol>
+                    </li>
+                  </ul>
+                  <p-divider></p-divider>
+                </div>
+              </p-tabPanel>
+          </p-tabView>
+        </ion-col>
+      </ion-row>
 
-    <ion-row class="ion-justify-content-center">
-      <ion-col size="12" size-md="10">
-        
-         <div>    
-          <p-chart type="bar" [data]="basicData" [options]="basicOptions"></p-chart>
-        </div> 
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</ion-content>
+      <ion-row class="ion-justify-content-center">
+        <ion-col size="12" size-md="10">
+          <div>
+            <p-chart type="bar" [data]="basicData" [options]="basicOptions"></p-chart>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
 
 
   <ion-footer>
