progress bar added

--- a/src/app/main/cuestionario/cuestionario.component.html
+++ b/src/app/main/cuestionario/cuestionario.component.html
@@ -1,4 +1,9 @@
 <ion-app>
+  <ion-header class="ion-no-border">
+    <ion-toolbar>  
+      <p-progressBar [value]="value"></p-progressBar>
+    </ion-toolbar>
+  </ion-header>
   <ion-content>
     <ion-grid>
       <ion-row class="ion-justify-content-center">
@@ -14,7 +19,7 @@
                         <div *ngFor="let pregunta of cat.preguntas">
                           <ng-container *ngIf="ticketService.ticketInformation.recoleccionDatos.perfilUsuario == pregunta.perfil.perfil">
                             <ion-list>
-                              <ion-radio-group [value]="pregunta.respuestaSeleccionada" allow-empty-selection="false" (ionChange)="pregunta.respuestaSeleccionada = $event.detail.value">
+                              <ion-radio-group [value]="pregunta.respuestaSeleccionada" allow-empty-selection="false" (ionChange)="pregunta.respuestaSeleccionada = $event.detail.value; sumProgress($event.detail.value)">
                                 <ion-list-header>
                                   <ion-label>
                                     <p class="question">
