--- a/src/app/main/recoleccion-datos/recoleccion-datos.component.html
+++ b/src/app/main/recoleccion-datos/recoleccion-datos.component.html
@@ -2,14 +2,21 @@
   <ion-content>
     <ion-list>
       <h1 class="encabezado centrado">{{"SELECT_PROFILE" | translate}}</h1>
-      <ion-item class="magin10">
-        <ion-label>{{"SELECT_PROFILE" | translate}}</ion-label>
-        <ion-select [value]="ticketService.ticketInformation.recoleccionDatos.perfilUsuario" (ionChange)="perfilChange($event.target.value)">
-          <ion-select-option *ngFor="let perfil of ticketService.ticketInformation.data.perfilesDisponibles" [value]="perfil.perfil">{{perfil.perfil}}</ion-select-option>
-        </ion-select>
-      </ion-item>
+      <ion-card>
+        <ion-item class="magin10 ion-activated">
+          <ion-label>{{"SELECT_PROFILE" | translate}}</ion-label>
+          <ion-select [value]="ticketService.ticketInformation.recoleccionDatos.perfilUsuario"
+            (ionChange)="perfilChange($event.target.value)">
+            <ion-select-option *ngFor="let perfil of ticketService.ticketInformation.data.perfilesDisponibles"
+              [value]="perfil.perfil">{{perfil.perfil}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-card>
 
-      <h1 *ngIf="ticketService.ticketInformation.recoleccionDatos.perfilUsuario != ''" class="encabezado centrado">{{"SELECT_AREAS" | translate}}</h1>
+
+      <h1 *ngIf="ticketService.ticketInformation.recoleccionDatos.perfilUsuario != ''" class="encabezado centrado">
+        {{"SELECT_AREAS" | translate}}</h1>
+
       <div *ngFor="let area of areasCandidatas">
         <ion-list-header>
           <h2>{{area.nombre}}</h2>
@@ -21,6 +28,8 @@
           </ion-item>
         </ion-list>
       </div>
+
+
     </ion-list>
   </ion-content>
 
