se sube parte del codigo

--- a/src/app/main/cuestionario/cuestionario.component.html
+++ b/src/app/main/cuestionario/cuestionario.component.html
@@ -8,7 +8,7 @@
     <ion-grid>
       <ion-row class="ion-justify-content-center">
         <ion-col size="12" size-md="10">
-            <div *ngFor="let area of ticketService.ticketInformation.explicacion.idiomaSeleccionado.areas">
+            <div *ngFor="let area of ticketService.ticketInformation.recoleccionDatos.idiomaFiltradoCheckedPerfil.areas">
               <div *ngFor="let cat of area.categorias">
                   <p-accordion>
                     <p-accordionTab>
