--- a/src/app/main/recoleccion-datos/recoleccion-datos.component.html
+++ b/src/app/main/recoleccion-datos/recoleccion-datos.component.html
@@ -1,19 +1,18 @@
 <ion-app>
   <ion-content>
-    <ion-list>
-      <h1 class="encabezado centrado">{{"SELECT_PROFILE" | translate}}</h1>
-      <ion-card>
-        <ion-item class="magin10 ion-activated">
-          <ion-label>{{"SELECT_PROFILE" | translate}}</ion-label>
-          <ion-select [value]="ticketService.ticketInformation.recoleccionDatos.perfilUsuario"
-            (ionChange)="perfilChange($event.target.value)">
-            <ion-select-option *ngFor="let perfil of ticketService.ticketInformation.data.perfilesDisponibles"
-              [value]="perfil.perfil">{{perfil.perfil}}</ion-select-option>
-          </ion-select>
-        </ion-item>
-      </ion-card>
 
-
+    <h1 class="encabezado centrado">{{"SELECT_PROFILE" | translate}}</h1>
+    <ion-card>
+      <ion-item class="magin10 ion-activated">
+        <ion-label>{{"SELECT_PROFILE" | translate}}</ion-label>
+        <ion-select [value]="ticketService.ticketInformation.recoleccionDatos.perfilUsuario"
+          (ionChange)="perfilChange($event.target.value)">
+          <ion-select-option *ngFor="let perfil of ticketService.ticketInformation.data.perfilesDisponibles"
+            [value]="perfil.perfil">{{perfil.perfil}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-card>
+    <div class="list">
       <h1 *ngIf="ticketService.ticketInformation.recoleccionDatos.perfilUsuario != ''" class="encabezado centrado">
         {{"SELECT_AREAS" | translate}}</h1>
 
@@ -28,9 +27,9 @@
           </ion-item>
         </ion-list>
       </div>
+    </div>
 
 
-    </ion-list>
   </ion-content>
 
   <ion-footer class="ion-no-border">
