--- a/src/app/main/recomendacion/recomendacion.component.html
+++ b/src/app/main/recomendacion/recomendacion.component.html
@@ -1,7 +1,13 @@
 <ion-app>
   <ion-content>
-    <h1 class="encabezado centrado">Resultados</h1>
+    <h1 class="encabezado centrado">{{"RESULTS" | translate}}</h1>
     <ion-grid>
+      <ion-row>
+        <ion-col size="12">
+          <p>{{"GRAPH_REC_WARNING" | translate}}</p>
+          <p-divider></p-divider>
+        </ion-col>
+      </ion-row>
       <ion-row class="ion-justify-content-center">
         <ion-col size="12">
           <p-tabView (onChange)="indexTabPanel = $event.index">
@@ -25,14 +31,21 @@
           </p-tabView>
         </ion-col>
       </ion-row>
-
-      <ion-row class="ion-justify-content-center">
-        <ion-col size="12" size-md="10">
-          <div>
-            <p-chart type="bar" [data]="basicData" [options]="basicOptions"></p-chart>
-          </div>
-        </ion-col>
-      </ion-row>
+      <p-fieldset legend="{{ 'GRAPH' | translate}}">
+        <ion-row class="ion-justify-content-center">
+          <ion-col size="12">
+            <p>{{"EXPL_GRAPH" | translate}}</p>
+            <p-divider></p-divider>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-justify-content-center">
+          <ion-col size="12" size-md="10">
+            <div>
+              <p-chart type="bar" [data]="basicData" [options]="basicOptions"></p-chart>
+            </div>
+          </ion-col>
+        </ion-row>
+      </p-fieldset>
     </ion-grid>
   </ion-content>
 
@@ -44,7 +57,7 @@
           <ion-col col-12>
             <div class="centrado">
               <ion-button color="primary" (click)="downloadPDF()">
-                <ion-icon name="download-outline"></ion-icon> Descargar resultados
+                <ion-icon name="download-outline"></ion-icon>{{"DOWNLOAD" | translate}}
               </ion-button>
             </div>
           </ion-col>
