--- a/src/app/main/recomendacion/recomendacion.component.html
+++ b/src/app/main/recomendacion/recomendacion.component.html
@@ -4,29 +4,32 @@
     <ion-grid>
       <ion-row>
         <ion-col size="12">
-          <p>{{"GRAPH_REC_WARNING" | translate}}</p>
+          <h3 style="text-align: center;">{{"GRAPH_REC_WARNING" | translate}}</h3>
           <p-divider></p-divider>
         </ion-col>
       </ion-row>
       <ion-row class="ion-justify-content-center">
         <ion-col size="12">
           <p-tabView (onChange)="indexTabPanel = $event.index">
-            <p-tabPanel [header]="area.nombre" *ngFor="let area of ticketService.ticketInformation.recoleccionDatos.idiomaFiltradoCheckedPerfil.areas; let i = index" [selected]="i == indexTabPanel">
-              <div *ngFor="let cat of area.categorias">
-                <ul>
+            <p-tabPanel [header]="area.nombre"
+              *ngFor="let area of ticketService.ticketInformation.recoleccionDatos.idiomaFiltradoCheckedPerfil.areas; let i = index"
+              [selected]="i == indexTabPanel">
+              <ng-container *ngFor="let cat of area.categorias">
+                <ul style="margin-left: -35px;">
                   <li class="nested-list"> <b>{{cat.nombre}}</b>| {{cat.descripcion}}
-                    <ol>
-                      <div *ngFor="let pregunta of cat.preguntas">
+                    <ol style="margin-left: -25px;">
+                      <li *ngIf="comprobarRecomendacionCategoria(cat)" [innerHTML]="cat.recomendacion"></li>
+                      <ng-container *ngFor="let pregunta of cat.preguntas">
                         <ng-container *ngIf="pregunta.puntuacionRecomendacion >= pregunta.respuestaSeleccionada.puntuacion">
-                            <li [innerHTML]="pregunta.recomendacion"></li>
-                          </ng-container>
-                        </div>
-                      </ol>
-                    </li>
-                  </ul>
-                  <p-divider></p-divider>
-                </div>
-              </p-tabPanel>
+                          <li [innerHTML]="pregunta.recomendacion"></li>
+                        </ng-container>
+                      </ng-container>
+                    </ol>
+                  </li>
+                </ul>
+                <p-divider></p-divider>
+              </ng-container>
+            </p-tabPanel>
           </p-tabView>
         </ion-col>
       </ion-row>
