changed styles in recomendacion and explicacion

--- a/src/app/main/explicacion/explicacion.component.html
+++ b/src/app/main/explicacion/explicacion.component.html
@@ -5,6 +5,7 @@
     <h1 class="encabezado centrado">{{"QUESTIONNAIRE_INSTRUCTIONS" | translate}}</h1>
     <div class="magin10">
       <h1 class="centrado txt-strong txt-subrayado">{{ "FOLLOW_STEPS" | translate}}</h1>
+      <p-divider></p-divider>
       <ion-card>
         <ion-item class="ion-activated">
           <ion-label>{{"SELECT_LANGUAGE" | translate}}</ion-label>
