--- a/src/app/main/recoleccion-datos/recoleccion-datos.component.html
+++ b/src/app/main/recoleccion-datos/recoleccion-datos.component.html
@@ -14,24 +14,22 @@
     </ion-card>
     <div *ngIf="ticketService.ticketInformation.recoleccionDatos.perfilUsuario != ''">
       <h1 class="encabezado centrado">{{"SELECT_AREAS" | translate}}</h1>
-
       <div *ngFor="let area of areasCandidatas">
         <ion-card>
           <ion-card-content>
             <ion-item>
-              <ion-label><b style="font-size: 22px; font-weight: bolder;">  {{area.nombre}} </b></ion-label>
+              <ion-label><b style="font-size: 22px; font-weight: bolder;"> {{area.nombre}} </b></ion-label>
             </ion-item>
             <ion-list>
               <ion-item *ngFor="let cat of area.categorias">
-                <ion-label>{{cat.nombre}} | {{cat.descripcion}}</ion-label>
+                <ion-label>{{cat.nombre}} | {{cat.descripcion}}
+                </ion-label>
                 <ion-checkbox [checked]="cat.isChecked" [(ngModel)]="cat.isChecked"></ion-checkbox>
               </ion-item>
             </ion-list>
           </ion-card-content>
         </ion-card>
       </div>
-
-
     </div>
   </ion-content>
   <ion-footer class="ion-no-border">
